# webpack-react-bazel

./: .babelrc  .gitignore  BUILD.bazel  WORKSPACE  package.json  tsconfig.json  webpack.config.js
spec/helpers/: babel.js  enzyme.js  jsdom.js  transform.js
spec/src/: App.spec.js
spec/support/: jasmine.json
src/: App.js  App.tsx  index.js
